# python-client

./: README.md  api.yaml
cli/: README.md  pyproject.toml
cli/cli/: .gitignore  README.md  cli.py  query.txt  shakespeare.txt  sherlock-holmes.txt
cli/cli/commands/: __init__.py  argparse2.py  common.py  create_collection.py  delete_collection.py  delete_document.py  download_document.py  inspect_catalog.py  inspect_collection.py  inspect_document.py  rename_collection.py  rename_document.py  search_collection.py  update_collection.py  update_document.py  upload_document.py
essofore-client/: README.md  pyproject.toml
essofore-client/essofore_client/: __init__.py
essofore-client/essofore_client/api/collections/: create_collection.py  delete_collection.py  get_catalog_info.py  get_collection_info.py  rename_collection.py  search.py  update_collection.py
essofore-client/essofore_client/api/documents/: delete_document.py  download_document.py  get_document_info.py  rename_document.py  update_document.py  upload_document.py
essofore-client/essofore_client/models/: __init__.py  bad_request.py  catalog_entry.py  catalog_info.py  collection_info.py  create_collection_metadata.py  document_info.py  document_type.py  download_document_metadata.py  import_args.py  import_args_metadata.py  metadata_mode.py  search_result.py  unprocessable_content.py  update_collection_metadata.py  update_document_metadata.py  upload_document_metadata.py  violation.py
