[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Siddharth Jain <support@essofore.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
essofore-client = {path = "../essofore-client"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
